--- a/CHM9/sln+form/CHM9/MainForm.resx
+++ b/CHM9/sln+form/CHM9/MainForm.resx
@@ -120,85 +120,82 @@
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="test_pictureBoxTask.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAosAAAB8CAYAAAAB4vqfAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        wwAADsMBx2+oZAAAEhJJREFUeF7t3TGS1DobhWHWxR7YBsUiWAIBMRsgJyAjJiWliAjJ2EH/HG6fmY/+
-        LVuyJVuW36dKdYdpW7YlWfosuee+uAEAAAAJBIsAAABIIlgEAABAEsEiAAAAkggWAQAAkESwCAAAgCSC
-        RQAAACQRLAIAACCJYBEAAABJBIsAAABIIlgEgNH9eH97+eLF7cX/pde3z/dNACCFYBEAhvX59tqB4cv3
-        tx/338qP9y+fgsbXRIwAZhAsAsCw7sHiQ6D4nx+39y+nA0kAiAgWNwlP7cmn85xtln39+vX29u3b27dv
-        3+6/qUP5KV/lj3qoL5zB8+wiy9EA0ggWt/jnPaCXt/dTj+Y528xQcPDq1au/+7979+7269ev+yd1KD/l
-        q/x1nNrBzdVQXziTz6/dNxEsAkgjWNzi8+t7R/snpaYMc7ZJ+Pjx49/93rx5c/v58+f9t20ofx1Hx9Nx
-        UY76wrmEZWheWmyq1UpDL3RdrHiMjWBxg+en8vTycs42Uz58+PB3H92Ae9LxdFwdH/mor31pcNI1exZX
-        ScGzAufWgfoonpegy1c8kKd0pUFt97Fda7+jgszfv38/9W1zWPEYH8Hiajkvh697gfzTp09PN90R3FHp
-        PLCM+tqPgkFfr4JDXfOXL1+eBjQnBqsF4fUYJhXbKF1p8PZq3/r5sV3v/SCq4/teU8rBise4CBZXe/7i
-        ysvkY3nONv/Szeab8/v37/ff7kvH9TkwSzOP+tpPHLg0kD3S7Ebchrab8twvESi24SAvN8BzoDi1fWzX
-        ewSM6k8c8Dnp3yWuuuIxMoLFtZ7eRZx5MTxnmwe+Sfd+inzkJYXSTuJqqK/9/HcvzQ9ACiK9HTMbU64V
-        KOodOrUX36dLqYbSlYb4sJdaptZ1eJupB6Ua4lLyY9LvSznAZYVqDASLKz297zPT4+ZsE2npzDfn0cto
-        PZ1Lr6ivffn6UgOq6B0rb7dmgBvbdQLFxyXU3LTVmpWG3Fk4X0+LB8IY4Lr/2HovXWXF4yoIFlfyF1fm
-        Ot2cbaL4VNcDnwuD7jTqq0+Uw5Tn96dzX4k5Ky/pug0oaFHgs4fSlQY9+Phclx7y4nXNPTCtoeB6agbQ
-        x1t7L7mPHHnF4yoIFle5P6HPfmklZ5tnPc6I+L0bpb0627OgvvrVW730wA+u04Gi+qoxvhEdl2v3fg1h
-        zex+PN+lADBuq5/34OOtvZfWlAn6dJlgUR2Hp/GXGr6n5JUmlxLu3yScfULP2SaIN1XpOyk6Rz/R6r+p
-        TkfX5TLI6Wzi+19nv9Gr1v8f1Fef4jLg1EzJmVRrJ353OrHE8d/rMm2CxVZtPSX3Hm9Bx/xbzn9SrviA
-        tyS27b0CYR9vS3nWyAPHGz5YVOfkziqmuQ7J75Ao7SUGKCXvd8SgxUnX+yhek1JOMDHCwNuq/qmvPsWl
-        ujPPrtZrJ8/vKc6n+sFiy7Y+JR4v9ZDXytqVhpIAU33Z0jGWPi9VIz9WPMYwdLCom0tPmuqM1EjVgeQ0
-        fm+j/fYSO43c4MOdhwOfeFPGPOIAOvV5Sgw+anU+e2pZ/1eorzhTWSu1pDr2zNKZg+Wq7ST+H6RmU93/
-        3V/rtj4lHmNvMVAtWWnwPrnn7G1T9/fS56Vq5MeKxxiGDxZjI49Pf6nBJA64ew44cfYrl4IfdbYWz90d
-        ljpr/VuDqD53wJTL+U3NCPSuZf1fob7OFiw6WNjzIa+FPdpJa0dcg+pd+9cKlEqor/D16VpyeZ/cc17a
-        vjS/JTXyi3W/55iKuvrpXXYQG62feB/FAXLPpyAfU2kL56Gb20/36oz18xrOT+nsata/t1HawnlQX9vE
-        wGNt2fXMdVqrnRyh9TXE/PemY/r4BIv/iv1urfPC/i41osRAINVBxaUMzUTtxcdU2kI3o/LQzJLS1s54
-        63nFMq+V1qpZ/95GaYve6uuMVF6+5q0PeD2116h2OzlC62uIZb42raXrWZOH99H+Obz9XkFXreM5n9zr
-        RH+uM6L84c5KnVSKPjuiUftmUtoiDnY1OuOt59XT4Fuz/mucj/RWX2ej8nKdpWaLS/QaLNZuJ0dofQ3O
-        e0taa20epft527MGi0o4p0vVnBurZo+mxHfa4vs2e/BxlbaIU/7qnLeqdV498HXUqH9vp7QF9bWN31Pb
-        +37dW+12coTW1+C89wqkIh9bqUTpjKS3JVjE3i5Tc7GjSi1V+b2nuW1aKe00UuJ11hhAndfZlw9q1z/1
-        dTwNYLrWI4KDvdVuJ0dofQ1HfsHF16VUwm04Z79Yfns9MPh4BIu4TM3p5nJjTb2LFgOAvZd5YqehTmEN
-        XZeX5JS2Bgyxczr7gFy7/q9QX7HMaqVa/O3TKwTFtdvJEfa4hvi+8d583NJjl3yL2t8WV9LPe/DxCBZx
-        mZrz4K4Oa0qcVUpt01LsNNZ2BHqy1rnrqd15pQKjHLFzOvufPKhd/1eor16DxXidZ3x3r1TtdnKEPa5B
-        qwHOe+09uVZ80CwRz3lptjD2OXvx8WoFi1d4uBvVZYLFuUavAccNObVNayWdxhQvwejpNA6mS8upc2Kw
-        sCWfHvg6atU/9XUcBR26xrlyVyAyQhm0aCd72/Ma3Db27sN1PF/X0gzhI++ncprj/in1znULPrct5any
-        qJEPjnX5YFGBgjoYzSz5Zozv06hDi/9uRYNbyQ3lc9b5uzP24Bnziueum7ako4kd4NlmMh75OmrVP/V1
-        DJWPrm9pYNUsTE699GaPdlLKx8wtzyOvQcedyr+1LSsNbtNKKocp+v3SNuJtarV956c6XSs+INRY8cAx
-        LhcsKvlmUyCgm8Cdij/3QOSOZ69OJw72c2KH6/TY0Trw0fWp03ZQVHKzOu8zDrqPfC1Kteqf+tpXLEeV
-        nwKQqaTPzlgOe7WTUj6XnPLs4Rpi8KVz1n2u82pJx/Ax1QZL6fpjmUQuH32+VEY+hxptPwZ5SmvLUOXh
-        PFROOKfLBIu6eWLDd4qBgJ+CY2rZCT+KHc7cTRWfMpUc3ETxBp3bLiX3XM6iRf1TX/uKQUBOqjFg7mmP
-        drKGj5NTnr1cg+7bx2PkpLVikLym3cWAUMkPQ7HNx74qxduuOQfVnZIeknWseD5K+rfKVf2LtnsMalNi
-        39s6aEc7lwkWxTMOSvpZDT5S4/dTrzqv0uWEGnx8/Tcld6nF1+ubvETOeZxNi/qnvvbjMsxNpWV4tD3a
-        yRo+Jx13SU/XoMBEeStY0XF8XnNpixgUraUAUX2P89F5T/VVKd4vp64eed/clBuQlm6PPl0qWDwDdQq+
-        uY6aIYqzVLmd1FVRXxhZbN9HPDyfSbwPj+gLeqyro8sE9RAsdkhPw7q59FS597S9juen8LPNzByF+sKo
-        NDuotjU3S4hnR87w91hXV1jxuAqCxU55SaP2uzxLvATCkkEZ6guj8awQgWK+o1YaeqyrOKvIisf5ESx2
-        zE+KmjlqfbMpfz8FMjisQ31hJGpXzFaXO2Klobe6YsVjPASLndML477pNHuU+w20XMrPs2I6jo6H9agv
-        AL5H915p6AUrHuMhWDwJBQW6AWu/uKz8lC9BR13UF3Bte6409IIVj3ERLAIA0IAe6lquNPSCFY/xESwC
-        ANBQq5WGXrDiMT6CRQAAACQRLAIAACCJYBEAAABJBIsAAABIIlgEAABAEsEiAAAAkggWAQAAkESwCAAA
-        gCSCRQAAACQRLAIAACCJYBEAAABJBIsAAABIIlgEAABAEsEiAAAAkggWG/r69evt7du3t2/fvt1/U4fy
-        U77KH+Oi/QAAekCw2IAG41evXt1evHhxe/fu3e3Xr1/3T+pQfspX+es4tYMJHIv2AwDoCcFiZR8/fvw7
-        CL958+b28+fP+2/bUP46jo6n4+L8aD8AgN4QLFb04cOHvwOvlvhyacDWfp5JUtKsT8lsj46n/ZTPFdQo
-        sx6taT/R79+/n/IocbX282htuQHAVdA7VvLp06e/g40CmFyeRdI++vnLly9Pg5ZSSdDgwEnnMbKaZdaT
-        Ne0nUjm4DSiVukr7ebS13ADgCugdK9BMlweb79+/3387z0HPVHCjd8o8gOUGPzquz6H18uVRapdZL9a0
-        H9P2Xkp20r9LXaH9RLXKDQCugGCxAg86awK71JcX9E1Vb6PZjxz+0sKIg16rMutBafuR+CWVx6TfrzFy
-        +7EW5QYAoyNY3EjvyXmwyX1nTkGBtl96R8wzZbmD95pzOYtWZXa0NXUWl6y9j967cz5rg56R24+0KjcA
-        GB3B4kZxliKHZja8/dKA7GVXpdRs2iNvP9LA17rMjlTafkSzplPvFjqfLXVfI49etSw3ABgZweIGa2Yl
-        4lLpUjATt839A8rxyx46vxG0LrOj1J7VqpHXiO1nSY1yA4CRXSZY1IyTlyiXBgUvVynpXbmUuGyX+45c
-        HIyXxC8+6Pxz6Dy8zyhLia3LLEcv7WeO89oS9IzYfpbUKDcAGNnwwaJmovwFgpjmZp38fpzSnBgU5H6D
-        VANSTt4Sl19zB7IYLE0tuZ1R6zKb01v7meO8tlz3iO1nSY1yA4CRDR0saqDXbJAGby2pxW/Uzg0M3kb7
-        zYlBTO5g7+2Vcnjb3IEsDvZbBr84w1QrrVWah7fdOvj32H7mOK8t1z1i+1ni/Le2FwAY1fDBYhwA4jti
-        qVmTkpmVOOOUy9vnDkyl24v32fKN4B6DxZZlNqXH9jPHeW29buczSvtZ4vy3lhsAjGroYPFRHMhTy4gl
-        72x5O6Vc3r5l4ON9lEZQWgal2+fqof3McV5br7v2efWuVrkBwKguFSzGgVyzRlNKvg3q7ZRyefvcWRtv
-        T7DYtsxy9NB+5jgvgsUytcoNAEZ1qWBRg4EGBb2HluJvvOYEJh5klHKV7uNtCRbbllmOHtrPHOe19bpr
-        n1fvapUbAIzqGqPBnQcFzf5Mie+k5fzZFW+rlEtBRMk+3vbKweIeZZbD+R7ZfuY4L4LFMrXKDQBGdY3R
-        4I/4vlnqXTK9h7a0TVQaxIgGpNx94jlrCTSX98mZ3TqDPcpsSS/tZ47zqhUsjtJ+ltQqNwAY1WWCxfi+
-        Wepdsjh4p95Ji2IQo2Aih74hm7tP/FMtc3/cOYpBzZbBL5ZXrbRW6zLL0Uv7meO8ttT7iO1nifPfcr0A
-        MLLLBIsemFPvm8VZobl30qIYxOQGJppx8j5LM18x/1wxWFr60y1zehrsW5dZjl7azxzntSXoGbH9LHH+
-        BIsAMO0yweLcgKBZIH3mmaHcQaMkiIm8z9Ifbfb5pN6RmxIH6Zyl0LNoWWY5fPwe2k+K89oS9IzafubU
-        KDcAGNnlg0UN9JoJ0syQB/v45QQNmKkvK8QvNJQMNMrP+6WWH+NyYMkSpc7D+6WWS8+oVpn589LAILXf
-        Ee0nxXnlzmxOGbX9zKlRbgAwsssFi0oOJDSQa4DwYO7PPXvlpcXUYC9xcC2h42of/ffx/TYHIPq8dCnQ
-        51Ij+OhNjTJbWz7eT6mH9vMoLh8rrQ30vP+I7WdKrXIDgJFdJliMg3JMcSDXIP/4+VKwpoDB2+rnXDG4
-        UdKyqZYAdT7+3VyQMWXtuZxFjTLzdqXBUG/tRwGrkgJSnUMsFyX9W8dWntruMbieMnr7kRblBgCju0yw
-        KAouPCjoZw0GkQYGLyVq4M/90oH30X9LKdiJQYYGq6lzy7HlPM5kS5l5H21fqqf24/PITTnB8RXaz2O5
-        LKWrzLACwJxLBYutKGjw4HLUjEycFVoTaF5BrKfcQG4PtB8AQM8IFivR0pUGWs1y7f3ek47n5bSlZc8r
-        83L10lL1EWg/AIBeESxW5PfatAS5Jy/JsmSW5pmzHgNFo/0AAHpEsFiZZ680U9N6OU/5+z2znoOgHqh8
-        zjBrRvsBAPSGYLEBfdPSy3qaran9jUrl51koHUfHwzhoPwCAnhAsNqRBuORbsbmUn/JlkB8b7QcA0AOC
-        RQAAACQRLAIAACCJYBEAAABJBIsAAABIIlgEAABAEsEiAAAAkggWAQAAkESwCAAAgCSCRQAAACQRLAIA
-        ACCJYBEAAABJBIsAAABIIlgEAABAEsEiAAAAkggWAQAAkESwCAAAgCSCRQAAACQRLAIAACCJYBEAAABJ
-        BIsAAABIIlgEAABAEsEiAAAAkggWAQAAkESwCAAAgCSCRQAAACQRLAIAACCJYBEAAABJBIsAAABIIlgE
-        AABAEsEiAAAAkggWAQAAkHC7/Q+vvADS3k3giQAAAABJRU5ErkJggg==
+        iVBORw0KGgoAAAANSUhEUgAAAiAAAAB7CAYAAABNXzsBAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wwAADsMBx2+oZAAAEUFJREFUeF7t3Qty46oSgOFZlxfk9WQ13kwW44kejZAMiGdLmP+rUtW5ji0Qr25w
+        5ubfGwAAQBkJCAAAUEcCAgAA1JGAAAAAdSQgAABAHQkIAABQRwICAADUkYAAAAB1JCAAAEAdCQgAAFBH
+        AgIAANSRgADoz+v5/vfv3+56/PyuPwTQAxKQHL8/78e66D1f62sT3+sBvz+Pv/c/3sVr57ogx5b7bWjH
+        cSx9vU84Xs+0eQfgeiQgOczu6/nerXe+111MshLx3lgp5X8L2nE4cwLy+Hnvck0ZB2QgQDdIQDK4dmAT
+        3+sfJMA1WSx/3z+PKXhWOA24O9oRYh0LPX8NU+0Urydrv5E3jokEJJkvMEUGLJWdmtTli3fwtOPB6/2c
+        2uPjGuMUZ/kKptPgHXWK5+jf6mO/VhmesXg8tRKcOA6LBCTZOrk+JqbvdZtiQGt6OnA12nFjL/b79pAT
+        uen6ymGwkufs8hljxpfjPVvfVpoDVcqwxuIh2Tgfi5EbOHwVEpBU627lYxL5XrepBrMvntC0o0UWfVf9
+        pO5/l2/32bmuk4+oUzzp388kQH7xtnwe1CrDf5+4sSjvqZRU4fZIQBItC97nBPG9vrkgkKkGai204966
+        6Hvqlr6L7UfXyUdksJVndP5ui4zLwr6tV0aFsfiVaxZ8SEASTTsC10T1vW5Efc9b2RVltkY7JvnWBKTv
+        5ONPVKDdTg3cb5MTh5J20ChjYcZi8DTugg0GLjNeAmKCScykqzgJZMGJOgrfJr2zjtYzhBeFBs9RqrT9
+        acck5gj9dl/BFPTN+rOPhH96Pfs5a4yV/T3M9VGnyCBryvS9bysvuPkJ0ShjtiU6p/fhFGQYQyUgcwYu
+        i0EokJlJWW/XaLL/s0k1ly3lyuS36mEthOcB8Wx3o6tG+3fTjrv7p19li73Ygset1vKivtn6wnnlPGiF
+        seL/XYnf9+t1+IC5n1WGi8wR7/i02mJXrvW6a37ZsstIE3f6sYptH3Rv3K9gAgEwOsglkAUqNbAsn5PF
+        YV0c53pN/30+QXPLbS6z/btpx13QSr9q9Ndt+/6gtG9qS62PtLNjuLqFkm/bNyQg1jyI//ja5t464VsM
+        m4C0CHIhufeUek7VnO8Rs4OwJJWrGDRz27+LdryBUPsGXZA4lfZNbSn1yWnn6M90nIDIfLGv+LGxlZlQ
+        JDo0bALiDyhtBn92ADMLxHSl7waTylUMPrnt30U7Xk2eNSeQX3FyU9g31UXXJ2+nHj2WTD0anU5MNMow
+        7RQqZ6+r+YZsgyYgoYVDflZ3IcyfUGXHkfecyPntTzuekATi4lOENGV9U19kfXaJiutyfz56LH1NAjKx
+        7hMxNruZbygyZgJidnmOICcTsvICnn0kfrpAhGyTvmjtqK2g/WnHgC6Tjz9FfdNAZH1kLKYGyejgap1G
+        ucfdNi6zA7VGGSKhn0lAxjBkAhIKYjLwy7J9h5PA6jQvDo/387nUN71Kd9tZLorav5d2tBb2nCt94ZU6
+        1j25a664bypLqE9ukIz/nPSprx5nP4+hUcbKmhNn9yIBGcOQCYh3cJsMvcJkOzKTLzZALBN/ruNar+TJ
+        mFymjqL276UdrcU250qt49KmvgRp2cVWH9PFKvRNVWn1yQ2SKad4UobzvZXmt0YZMzO/zxL5Tk4cUWzA
+        BMQ3uKfF5/F+zD/bJsi0WNSZBBGTaprs885+fa/s8mURSDxaT1no9JS2P+344SxYzj9POL1pqXLfnDJB
+        zxNAC+qTPS6kTjHPGqh/KAEKJhVHOWW4PiNt5ikzvr2WRPA2YxbNDH0CYibCPHGmiSTBbR346+L0+q00
+        C2TS+iagmdTTZS8Gh3qtEzQ8j4+fuY/i9qcdLbJYn103qX/VvokgQdH3/EX12dr+GKCnYOtNCE2d7PL8
+        zHyxE5aTOZCaHCWX4WpX85q7PeZ7xTxzYvugX2P+Eqq1cHgn3fH1KsLBLDhJvQulx8kCda3S9qcdjd3z
+        hC5PAFZWtW9inASz8vrIWNxf3uRjtn0melg5+jn02Y8kP0ZKGb52tZKQ6HsdmD5JqTu6NGgCciGZ5E0n
+        lwT4Sov4HdGOiKEyTjI0rVdGgpOqWf3Dmwt8FxKQK6gsPgNMYNoRQWsfVj/JrKHh+FrnRfgUpkTDdm06
+        p3E3JCBXkYlWc3c94nentCM85qP8OweyJsF2SQ5aPna7duXEcTQkIBdbvu+ssAtaF7NRNw60I7rUJAnp
+        ESeOIyIBAYArtTjF6wknjsMiAQGAG6h2itcTThyHRgICAADUkYAAAAB1JCAAAEAdCQgAAFBHAgIAANSR
+        gAAAAHUkIAAAQB0JCAAAUEcCAgAA1JGAAAAAdSQgAIay/F+eT397ZLva/el6AD4kIDnMH086/A0D3+sB
+        /BXXOmhHxJDkw044Xs+0OQugDhKQHL6/XpnyVy1b/AXIlPK/Be2IBHMC8vh57/LUtb85BQF0kYBkcO2i
+        Jr7XP0iAa7Ll+n3/PKbgOcBf1aQdUYHM215PQJb6DzhO1/nPyVW/SECS+QJTZMCSHXvTWSN1+eIdPO14
+        SgLrdLG7d+s6eEed/r3ez3UMmCtrzjjuM13H06Sq1vkXKoPTyq6RgCRbJ+LHJPa9blMMaE1PB65GO4bI
+        7zS0DQ49k/EjV4fBK2ZcOt6zJaWxz2wlHofxZCe4dafHoX9Ox7G8n9PK3pCApFp3HR8Tzve6TTWYffGk
+        pB09JFiwEMfbgp3KcKoh6vRPxsJnomES1KgH9t/Hbrtaya6pm31F3Vvq0mEyOTASkERL1v85yH2vby4I
+        ZB3u3s/Rjm4kH9kkoHdxYhQXaOV0wvnVm4znqGC9jivP2E8/UfGbkw+rHHPv2H75yvXuu5GAJJomiWtS
+        +143or6vreyKMlujHZ1k58jveoS552k4yN5KVJDdTibcb5NktfzUJzlJSJB+7ws2JygyXgJigkloAjbY
+        TcrCETWZtgXCWUfrGcILSIPnKFXa/rTjp+wEqVb7aMuv95Ko7ftRkrf8Z6zRjvt7mGs3ziMDrCnP976t
+        rLKEdUt0WiS+WckNpyBdGSoBmQe0DOZQIMte0P3MZDqbGHPZUq4sFFY9rMXsPCCe7YR01Wj/btpxd//0
+        K2VBlwCatOhWbR9FxfXegu92FTxfhXb099/v+/WyPmDuZd3fReaW97m28VwSqMMJglWG8+fnwvf3iG0j
+        3MK4X8EEAmB0kEsgi0zqTmG/Y1sXuLle03+fT7LccpvLbP9u2nEXeNKv+OeToCfJ0fa/tyv2+fLb5yp3
+        q3dqfWRcLX13IpS021onINbY9n/8ogRE2tz77LiTYROQFkEuJPeeUs+pmvM9EidzUrlqQTO//btoR00f
+        fbYPcqadTxbk0vaZKY4fUaXeFaXUx/SNYw64RL+/UQIic8C+/H12VQKylZvwaLjIsAmIP6C0GcD+8k6Y
+        xWS60nd0SeUqBpDc9u+iHTVZz+Wrm9Q9GGwK22d2QQJSpd41RdcnfacePQZNHRqdgMyk/qFyyuQlIAnt
+        hMsNmoCEJr/8rO5ilj8pyo4U7zkZ89ufdjw4DTZ/zHvqBsR7uFu9I+uzS1Rc1+fno8egSgIyse7T4OSJ
+        BOT7jZmAmJ2aY0GWyVt5QqUetxoxAcarzWlOsYL2px0PYp6r1nvu6G71jqyPjOOUIBkdWK2TKPd43cZz
+        cZBu2P4kIN9vyAQkFMRk8JbtDBxkoqZMpnkhebyfz6W+6VW65662qP17aUcrCORc0YunKSdQt7MgUdw+
+        F7lbvRPqkxMk4z8j49VXh7OfJ7DGee32JwH5fkMmIN4BahbqBouZmaixX+0si8Rcx7VeyRMquUwdRe3f
+        SztaC3POFV/H89OZ8EJeoX0ucbd6p9UnJ0iGEvcjub/zvTXXBTNn73ICcuPTSnwYMAHxDdBpAXm8H/PP
+        tsk0TYI6AzliYkwLwzzZ1vfKxJMFI3EnkLJg6Sltf9rxKFy/rb1MsKvcPmq0622CqydQF9Qna0xJfWKe
+        M1D38w2A9Rl5Fk89Q88RTIIimHsn9euSCLZIiFDf0CcgZmLMk2yadLJYr4N3XWBev5VGskxw34Q0C8B0
+        2QvHoV7rJAvP6+Nn7qO4/WnHA6nj33V4GGcQqNo+irTrLcHX1/dF9Vlemz57TASmwOs8GTH1scvyM31v
+        B/DQ3HE9r3nNXc/PZ99kJVnG1j7TFX2LxDbCtcb8JdTD4HZO0OPrVYSDWXBCexc7j9BCc7nS9qcdnXbP
+        JtdnG1VtH0Xq9T4JZuX1kXG8v5zJx2x7f/RwdIwJ72d9z2slIdH3+pN+AnJYFzxX6HamT6LLxJUGTUAu
+        JAtC0wkiE7nSQnxHtCNaUxljiVrWqeq9M5KlYuGNCe6HBOQKTRe2gSYh7Yhm1v6vfgpaqtW4rPy869z0
+        n+Y00HQ9QAskIFeRyVJzdz3i95+0IxqYj/LvGsgaBNq6z7skM7rNx2llj0hALrZ8Z1lhN7MuSqMm/7Qj
+        htIgCekXp5W9IgEBgB61OP3rDaeVXSMBAYCOVTv96w2nld0jAQEAAOpIQAAAgDoSEAAAoI4EBAAAqCMB
+        AQAA6khAAACAOhIQAACgjgQEAACoIwEBAADqSEAAAIA6EhAAAKCOBKSSKn+Pgb9toI5+A4BrkICUqv3X
+        GPkLlzroNwC4FAlICQk61be+v++fxxTMBvwLlxroNwC4HAlILtlBRwWx1/s5746t6/RzEsx62lHnPKey
+        pH4Ta188fv7+60yP/SZSnhMAypCAZEkIMo7d9vJ7BxGfb7ZTb6DkOdWkJgfy/vWKDcw99dss8zkBoAAJ
+        SI7oACMnAp8B7/VcF/vgPSQw3P1Iv/Q5lSQkBqbe9hUdmHvpt9LnBIB8JCDJ4oOLnAA8XG+UYPgFpyBV
+        nrO5+H6bg7LV3uYkJyUwd9BvVZ4TADKRgKSK/tcT27G2OwZtvy8RjFG1/7VGdZWes7WCdswKzLfvt08k
+        IAA0jZeAmMCwXOGg6dgty872bJE25fh23Ftgdp4cGIG63EG15zyh1W8OeYH55v3mQAICQNNQCci8wMri
+        GgpIgd2rWaTPtvPmqwdfANpODsL3Ojth8DgE7NQrOlkoek7rZ4Ggp9pvDnmB+eb95pD3nACQZ9yvYAKB
+        LBSs5Jf2Thf6aglIQpm2L0pAdlr3m0NuYL51vzmQgADQNGwCkhusuklAtCgnIM37zUE1AbkQCQgATcMm
+        IP7gsAVFV14QHVRIQFbxzxmjeb85kIAAQH2DJiChXxCUn7n/9QIJyIFqAqLQbw4kIABQ35gJSOCXFU1A
+        9SzCZpE+C6bWd/nut26BORygwjv7y1V7zgga/eaQF5hv3m8OJCAANA2ZgISCkexavYHqJNBtZEfuC0Bn
+        PxehXX+A2i8z1nrOczr99ikvMN+93z6RgADQNGQC4j0aN18nBIJlaBd+EAyKsfdJKG9HMZBVec4IWv12
+        lBWYO+i3IxIQAJoGTEB8R+PTjvXxfsw/23at06K8f1/C0boJjJ9ByBtMD0xQOC3sQgXPGUxedhT77SAn
+        MHfRbwc5zwkAuYY+ATHBYd51TsFTgtQayKbX/xbj1+9hOZaAGxFcTFn2oh79+UN9biz3OVMCtWa/bbav
+        kKYr7qP99Nsm5zkBIN+Yv4R6WGydQfP4+k5igLHvuV5RC3xWwLxQxnPGn4BMtPrtUI7n8la5m34rfE4A
+        KDBoAlJB8yAjwSHxdwi6IgmBYpCj3wDgFkhASjQLZj0e4WdY26/kFyez0G8AcDkSkFISzGrteM2/gvj2
+        HfQSrNVOPo7oNwC4FAlIJcsvUxbufNegeFlQHhD9BgDXIAEBAADqSEAAAIA6EhAAAKCOBAQAAKgjAQEA
+        AOpIQAAAgDoSEAAAoI4EBAAAqCMBAQAA6khAAACAOhIQAACgjgQEAACoIwEBAADK3u//YE8+kY/TL7MA
+        AAAASUVORK5CYII=
 </value>
   </data>
   <data name="test_pictureBoxTask.ErrorImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
